--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Install Terraform
       env:
-        TERRAFORM_VERSION: "0.12.15"
+        TERRAFORM_VERSION: "1.1.9"
       run: |
         tf_version=$TERRAFORM_VERSION
         wget https://releases.hashicorp.com/terraform/"$tf_version"/terraform_"$tf_version"_linux_amd64.zip
@@ -30,6 +30,9 @@ jobs:
         sudo mv terraform /usr/local/bin/
     - name: Verify Terraform version
       run: terraform --version
+
+    - name: Changing directory into terraform
+      run : cd terraform
 
     - name: Terraform init
       env:
@@ -40,8 +43,8 @@ jobs:
     - name: Terraform validation
       run: terraform validate
 
-    - name: Terraform apply
+    - name: Terraform Plan
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: terraform apply -auto-approve -input=false
+      run: terraform plan
