finding the working directory

--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -23,7 +23,8 @@ jobs:
       run: terraform --version
 
     - name: Changing directory into terraform
-      run : cd terraform
+      run : |
+            pwd
 
     - name: Terraform init
       env:
