--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -25,12 +25,16 @@ jobs:
     - name: Changing directory into terraform
       run : |
             pwd
+            cd terraform
+            pwd
 
     - name: Terraform init
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: terraform init -input=false
+      run: |
+            pwd
+            terraform init -input=false
 
     - name: Terraform validation
       run: terraform validate
