--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -29,7 +29,11 @@ jobs:
       run: |
             cd terraform
             terraform init -input=false
-
+    - name: Generating ssh keys
+      run: |
+            cd ~/.ssh
+            pwd
+            ssh-keygen -t rsa -b 2048 -P "manni"  -N "manni"  -f my-ec2-ssh -m PEM -y
     - name: Terraform validation
       run: |
             cd terraform
