--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -29,10 +29,6 @@ jobs:
       run: |
             cd terraform
             terraform init -input=false
-    - name: Generating ssh keys
-      run: |
-            pwd
-            ssh-keygen -t rsa -b 2048 -P "manni"  -N "manni"  -f my-ec2-ssh -m PEM -y
     - name: Terraform validation
       run: |
             cd terraform
@@ -42,6 +38,8 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        TF_VAR_public_key : ${{secrets.TF_VAR_PUBLIC_KEY}}
+        TF_VAR_private_key : ${{secrets.TF_VAR_PRIVATE_KEY}}
       run: |
             cd terraform
             terraform plan
@@ -50,6 +48,7 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
       run: |
             cd terraform
             terraform apply -auto-approve
