--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -48,7 +48,8 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
+        TF_VAR_public_key: ${{secrets.TF_VAR_PUBLIC_KEY}}
+        TF_VAR_private_key: ${{secrets.TF_VAR_PRIVATE_KEY}}
       run: |
             cd terraform
             terraform apply -auto-approve
