--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -56,7 +56,7 @@ jobs:
             terraform output -json
             sudo apt update
             sudo apt install -y jq
-            terraform output -json | jq ".target.value"
+            terraform output -json target | jq ".target.value"
             export IP_ADDRESS=$(terraform output -json | jq ".target.value")
             echo $IP_ADDRESS
 
