--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -24,34 +24,32 @@ jobs:
 
     - name: Terraform init
       env:
+        TF_ACTION_WORKING_DIR: 'terraform'
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
             cd terraform
             terraform init -input=false
     - name: Terraform validation
-      run: |
-            cd terraform
-            terraform validate
+      run: terraform validate
 
     - name: Terraform Plan
       env:
+        TF_ACTION_WORKING_DIR: 'terraform'
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         TF_VAR_public_key : ${{secrets.TF_VAR_PUBLIC_KEY}}
         TF_VAR_private_key : ${{secrets.TF_VAR_PRIVATE_KEY}}
-      run: |
-            cd terraform
-            terraform plan
+      run: terraform plan
 
     - name: Terraform Apply
       env:
+        TF_ACTION_WORKING_DIR: 'terraform'
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         TF_VAR_public_key: ${{secrets.TF_VAR_PUBLIC_KEY}}
         TF_VAR_private_key: ${{secrets.TF_VAR_PRIVATE_KEY}}
       run: |
-            cd terraform
             terraform apply -auto-approve
             terraform output -json
             sudo apt update
