--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -52,7 +52,7 @@ jobs:
         TF_VAR_private_key: ${{secrets.TF_VAR_PRIVATE_KEY}}
       run: |
             cd terraform
-            terraform apply -auto-approve
+            terraform apply -auto-approve -input =false
             terraform output -json
             sudo apt update
             sudo apt install -y jq
