--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -28,7 +28,7 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
             cd terraform
-            terraform init -input=false
+            terraform init
     - name: Terraform validation
       run: |
             cd terraform
