--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -44,7 +44,7 @@ jobs:
         TF_VAR_private_key : ${{secrets.TF_VAR_PRIVATE_KEY}}
       run: |
             cd terraform
-            terraform plan -backend-config="access_key = ${{ secrets.AWS_ACCESS_KEY_ID }}" -backend-config="secret_key = ${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+            terraform plan
 
     - name: Terraform Apply
       env:
