--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -60,3 +60,9 @@ jobs:
             export IP_ADDRESS1=$(terraform output -raw abc)
             echo $IP_ADDRESS
 
+  On-EC2:
+    needs: [terraform_apply]
+    runs-on: self-hosted
+    steps:
+      - name: Running demo file
+        run: touch test.txt
