--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -64,5 +64,7 @@ jobs:
     needs: [terraform_apply]
     runs-on: self-hosted
     steps:
+      - uses: actions/checkout@v1
+      - run : pwd
       - name: Running demo file
         run: touch test.txt
