--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -73,7 +73,7 @@ jobs:
           cache: 'maven'
 
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn -B package --file pom.xml -Dspring-boot.run.arguments="--spring.datasource.url=jdbc:postgresql://astro-db.ca48wkfuajrq.ap-south-1.rds.amazonaws.com/employee"
 
       - name: Running springboot
         run:  java -jar target/employeesportal-0.0.1-SNAPSHOT.jar -Dspring-boot.run.arguments="--spring.datasource.url=jdbc:postgresql://astro-db.ca48wkfuajrq.ap-south-1.rds.amazonaws.com/employee"
