--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -63,6 +63,28 @@ jobs:
   On-EC2:
     needs: [terraform_apply]
     runs-on: self-hosted
+      # Containers must run in Linux based operating systems
+      # Docker Hub image that `container-job` executes in
+    services:
+        # Label used to access the service container
+      postgres:
+          # Docker Hub image
+        image: postgres
+          # Provide the password for postgres
+        env:
+            POSTGRES_USER: astro
+            POSTGRES_PASSWORD: astro063
+            POSTGRES_DB: employee
+          # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+            # Maps tcp port 5432 on service container to the host
+          - 5432:5432
+    #
     steps:
       - uses: actions/checkout@v1
       - name: Set up JDK 11
@@ -73,7 +95,7 @@ jobs:
           cache: 'maven'
 
       - name: Build with Maven
-        run: mvn -B package --file pom.xml -Dspring-boot.run.arguments="--spring.datasource.url=jdbc:postgresql://astro-db.ca48wkfuajrq.ap-south-1.rds.amazonaws.com/employee"
+        run: mvn -B package --file pom.xml
 
       - name: Running springboot
-        run:  java -jar target/employeesportal-0.0.1-SNAPSHOT.jar -Dspring-boot.run.arguments="--spring.datasource.url=jdbc:postgresql://astro-db.ca48wkfuajrq.ap-south-1.rds.amazonaws.com/employee"
+        run:  java -jar target/employeesportal-0.0.1-SNAPSHOT.jar
