updated datasource url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/employee
+spring.datasource.url=jdbc:postgresql://astro-db.ca48wkfuajrq.ap-south-1.rds.amazonaws.com/employee
 spring.datasource.username=astro
 spring.datasource.password=astro063
 spring.jpa.hibernate.ddl-auto=update
