--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -65,25 +65,25 @@ jobs:
     runs-on: self-hosted
       # Containers must run in Linux based operating systems
       # Docker Hub image that `container-job` executes in
-    services:
-        # Label used to access the service container
-      postgres:
-          # Docker Hub image
-        image: postgres
-          # Provide the password for postgres
-        env:
-            POSTGRES_USER: astro
-            POSTGRES_PASSWORD: astro063
-            POSTGRES_DB: employee
-          # Set health checks to wait until postgres has started
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-            # Maps tcp port 5432 on service container to the host
-          - 5432:5432
+#    services:
+#        # Label used to access the service container
+#      postgres:
+#          # Docker Hub image
+#        image: postgres
+#          # Provide the password for postgres
+#        env:
+#            POSTGRES_USER: astro
+#            POSTGRES_PASSWORD: astro063
+#            POSTGRES_DB: employee
+#          # Set health checks to wait until postgres has started
+#        options: >-
+#          --health-cmd pg_isready
+#          --health-interval 10s
+#          --health-timeout 5s
+#          --health-retries 5
+#        ports:
+#            # Maps tcp port 5432 on service container to the host
+#          - 5432:5432
     #
     steps:
       - uses: actions/checkout@v1
