--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -66,7 +66,7 @@ jobs:
         ssh-key: ${{secrets.TF_VAR_PRIVATE_KEY}}
       run: |
             cd ansible
-            ansible-playbook -i inventory script.yaml --private-key $ssh-key -vv
+            ansible-playbook -i inventory script.yaml --private-key "$ssh-key" -vv
 
 #      with:
 #        playbookName: "ansible/script.yaml"
