--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -66,7 +66,9 @@ jobs:
         ssh-key: ${{secrets.TF_VAR_PRIVATE_KEY}}
       run: |
             cd ansible
-            echo "$ssh-key" > ssh-key.pem
+            echo "$ssh-key" > ssh-key
+            cat ssh-key
+            pwd
             ansible-playbook -i inventory script.yaml --private-key ss-key.pem -vv
 
 #      with:
