fix: ansible test19

--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -68,6 +68,7 @@ jobs:
             cd ansible
             echo $target
             echo 10
+            touch ssh-key
             echo $sshkey > ssh-key
             cat sshkey
             pwd
