fix: ansible test22

--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -63,7 +63,7 @@ jobs:
     - name : Running ansible command
       env:
         target: ${{secrets.TARGET}}
-        sshkey: ${{secrets.TF_VAR_PRIVATE_KEY}}
+        sshkey: ${{secrets.TF_VAR_PUBLIC_KE}}
       run: |
             cd ansible
             echo $target
