--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -60,23 +60,18 @@ jobs:
             export IP_ADDRESS1=$(terraform output -raw abc)
             echo $IP_ADDRESS
 
+    - name: Decrypt Pem
+      env:
+        LARGE_SECRET_PASSPHRASE: ${{ secrets.LARGE_SECRET_PASSPHRASE }}
+      run: |
+            mkdir $HOME/secrets
+            gpg --quiet --batch --yes --decrypt --passphrase="$LARGE_SECRET_PASSPHRASE" --output $HOME/secrets/my_private_key.pem my_ec2-ssh.gpg
+
+
     - name : Running ansible command
       env:
         TARGET: ${{secrets.TARGET}}
         SSH_KEY: ${{secrets.TF_VAR_PRIVATE_KEY}}
       run: |
             cd ansible
-            echo "$SSH_KEY" > ~/.vault_pass.txt
-            mkdir ~/.ssh
-            ansible-vault view --vault-password-file=~/.vault_pass.txt ansible/ssh_key.txt.secret > ~/.ssh/id_rsa
-            chmod 0600 ~/.ssh/id_rsa
-
-            ansible-playbook -e "build_sha=$GITHUB_SHA" --vault-password-file ~/.vault_pass.txt -i inventory script.yaml
-#            ansible-playbook -i inventory script.yaml --private-key ssh-key -vv
-
-#      with:
-#        playbookName: "ansible/script.yaml"
-#        inventoryFile: "ansible/inventory"
-#        keyFile: ${{secrets.TF_VAR_PRIVATE_KEY}}
-#        extraVars: "-e target=${{secrets.TARGET}} "
-#        verbosity: "vvv"
+            ansible-playbook -i inventory script.yaml --private-key $HOME/secrets/my_private_key.pem
