--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -65,7 +65,7 @@ jobs:
         LARGE_SECRET_PASSPHRASE: ${{ secrets.LARGE_SECRET_PASSPHRASE }}
       run: |
             mkdir $HOME/secrets
-            gpg --quiet --batch --yes --decrypt --passphrase="$LARGE_SECRET_PASSPHRASE" --output $HOME/secrets/my_private_key.pem my_ec2-ssh.gpg
+            gpg --quiet --batch --yes --decrypt --passphrase="$LARGE_SECRET_PASSPHRASE" --output $HOME/secrets/my_private_key.pem my-ec2-ssh.gpg
 
 
     - name : Running ansible command
