--- a/ansible/script.yaml
+++ b/ansible/script.yaml
@@ -18,20 +18,39 @@
       ansible.builtin.shell:
         cmd: sudo apt install maven -y
 
+    - name: Installing npm
+      ansible.builtin.shell:
+        cmd: sudo apt install npm -y
+
+    - name: Installing pm2
+      ansible.builtin.shell:
+        cmd: sudo npm install pm2 -g
+
     - name: Building server Application
       ansible.builtin.shell:
-        chdir: /home/ubuntu/astro/EmployeePortal
+        chdir: /home/ubuntu/astro/
         cmd: mvn -B package --file pom.xml
 
     - name: Running server Application in background
       ansible.builtin.shell:
-        chdir: /home/ubuntu/astro/EmployeePortal
+        chdir: /home/ubuntu/astro/
         cmd: |
+              kill $(lsof -t -i:8080)
               nohup java -jar target/employeesportal-0.0.1-SNAPSHOT.jar &
 
     - name: Cloning to Fronted  Repository
       git:
         repo: 'https://github.com/ManikantaKodimala/employeePorrtalUI'
-        dest: /home/ubuntu/astro
+        dest: /home/ubuntu/astro-ui
         clone: yes
         update: yes
+
+    - name: Building Front end
+      ansible.builtin.shell:
+        chdir: /home/ubuntu/astro-ui/
+        cmd: npm install
+
+    - name: Runing frontend
+      ansible.builtin.shell:
+        chdir: /home/ubuntu/astro-ui/
+        cmd: pm2 start npm -- start
