--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -73,4 +73,4 @@ jobs:
         SSH_KEY: ${{secrets.TF_VAR_PRIVATE_KEY}}
       run: |
         cd ansible
-        ansible-playbook -i inventory script.yaml --private-key $HOME/secrets/my_private_key.pem
+        ansible-playbook -i inventory.yaml script.yaml --private-key $HOME/secrets/my_private_key.pem
