--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -19,6 +19,9 @@ jobs:
     - uses: actions/checkout@v1
 
     - uses: hashicorp/setup-terraform@v2
+      with:
+        terraform_wrapper: false
+
     - name: Verify Terraform version
       run: terraform --version
 
@@ -59,6 +62,9 @@ jobs:
             terraform output -json
             export IP_ADDRESS=$(terraform output -raw target)
             echo $IP_ADDRESS
+            terraform output instance_endpoint -json
+            export INSTACE_ENDPOINT = $(terraform output -raw instance_endpoint)
+            echo $INSTACE_ENDPOINT
 
     - name: Decrypt Pem
       env:
@@ -74,4 +80,5 @@ jobs:
         SSH_KEY: ${{secrets.TF_VAR_PRIVATE_KEY}}
       run: |
         cd ansible
-        ansible-playbook -i inventory.yaml script.yaml --private-key $HOME/secrets/my_private_key.pem
+        echo $IP_ADDRESS
+        ansible-playbook -i inventory.yaml script.yaml --private-key $HOME/secrets/my_private_key.pem --extra-vars "target = $IP_ADDRESS "
