--- a/ansible/inventory.yaml
+++ b/ansible/inventory.yaml
@@ -1,5 +1,5 @@
 all:
   hosts:
-    3.7.51.251:
+    "{{target}}":
       ansible_ssh_extra_args: -o StrictHostKeyChecking=no
       ansible_user: ubuntu
