--- a/ansible/script.yaml
+++ b/ansible/script.yaml
@@ -22,5 +22,5 @@
       ansible.builtin.shell:
         chdir: /home/ubuntu/astro/
         cmd: |
-              kill $(lsof -t -i:8080)
-              nohup mvn spring-boot:run -Dspring-boot.run.arguments="--spring.datasource.url=jdbc:postgresql://astro-db.crli2ms66ure.ap-south-1.rds.amazonaws.com/employee" &
+              kill $(lsof -i tcp:8080)
+              nohup mvn spring-boot:run -Dspring-boot.run.arguments="--spring.datasource.url=jdbc:postgresql://astro-db.crli2ms66ure.ap-south-1.rds.amazonaws.com/employee" & > ../nohup.out
