--- a/.github/workflows/Terraform.yml
+++ b/.github/workflows/Terraform.yml
@@ -69,6 +69,7 @@ jobs:
             terraform apply -auto-approve -input=false
             export IP_ADDRESS=$(terraform output -raw target)
             export INSTACE_ENDPOINT=$(terraform output instance_endpoint)
+            terraform output instance_endpoint
             cd ../ansible
             echo $IP_ADDRESS
             echo $INSTANCE_ENDPOINT
